--- a/app/src/main/res/layout/activity_androcles_fable.xml
+++ b/app/src/main/res/layout/activity_androcles_fable.xml
@@ -34,7 +34,8 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:fontFamily="sans-serif-condensed"
-      android:textSize="25dp"
+      android:textSize="20dp"
+      android:paddingLeft="18dp"
       android:text="A slave named Androcles once escaped from his master and fled to the forest. As he was wandering about there he came upon a Lion lying down moaning and groaning. At first he turned to flee, but finding that the Lion did not pursue him, he turned back and went up to him.
 
 As he came near, the Lion put out his paw, which was all swollen and bleeding, and Androcles found that a huge thorn had got into it, and was causing all the pain. He pulled out the thorn and bound up the paw of the Lion, who was soon able to rise and lick the hand of Androcles like a dog. Then the Lion took Androcles to his cave, and every day used to bring him meat from which to live.
