--- a/app/src/main/res/layout/activity_the_boysandthe_frogs.xml
+++ b/app/src/main/res/layout/activity_the_boysandthe_frogs.xml
@@ -34,6 +34,11 @@
        android:id="@+id/btnFable2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
+        android:fontFamily="sans-serif-condensed"
+        android:textSize="20dp"
+        android:paddingLeft="18dp"
+
+
        android:text="Some boys, playing near a pond, saw a number of Frogs in the water, and began to pelt them with stones.
 
 They killed several of them, when one of the Frogs, lifting his head out of the water, cried out:
