--- a/app/src/main/res/layout/activity_the_camelandthe_arab.xml
+++ b/app/src/main/res/layout/activity_the_camelandthe_arab.xml
@@ -31,6 +31,10 @@
       android:id="@+id/btnFable3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed"
+        android:textSize="20dp"
+        android:paddingLeft="18dp"
+
       android:text="An Arab Camel-driver having completed the lading of his Camel, asked him which he would like best, to go up hill or down hill.
 
 The poor beast replied, not without a touch of reason: Why do you ask me? Is it that the level way through the desert is closed?"></TextView>
